# fetch-and-rotate

./: .gitignore  README.md  assignment.md  config.ini  input.txt  pyproject.toml
db/: imgs.db  imgs.dump.sql  schema.sql
src/: fsutils.py  main.py  urlutils.py
src/tests/: test_urlutils.py
