[tool.poetry]
name = "fetch-and-rotate"
version = "0.0.0"
description = "A script for fetching and rotating images from arbitrary websites"
authors = ["Oleksii Markhovskyi <olexiy.markhovsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
Pillow = "^9.0.1"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.8.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
